--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,17 @@
       <div class="banner-content">
         <h1>WELCOME HOME</h1>
         <p>Rent unique places to stay from local hosts in 190+ countries.</p>
-        <%= link_to "Our Team", "team.html", class: "btn btn-primary" %>
+        <form action="#" class="form-inline">
+         <input class="form-control input-lg" placeholder="checkin" type="text">
+         <input class="form-control input-lg" placeholder="checkout" type="text">
+         <select name="" id="" class="form-control input-lg">
+           <option value="1">1 person</option>
+           <option value="2">2 persons</option>
+           <option value="3">3 persons</option>
+         </select>
+         <input class="btn btn-primary btn-lg" value="Search" type="submit">
+       </form>
+       <%= link_to "Our Team", "team.html", class: "btn btn-primary" %>
       </div>
     </div>
 
@@ -36,7 +46,7 @@
       </div>
     </div>
 
-    <div class="wrapper-grey padded">
+    <!-- <div class="wrapper-grey padded">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-4">
@@ -46,8 +56,8 @@
                   <h2>Some stuff</h2>
                   <p>Very cool stuff, useful and smart</p>
                 </div>
-                <img class="card-user avatar-large" src="images/boris.png">
-                <a class="card-link" href="#" ></a>
+                <%= image_tag"images/boris.png", class: "card-user avatar-large"%>
+                <%= link_to "", "team.html", class: "card-link" %>
             </div>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -57,8 +67,8 @@
                   <h2>Some stuff</h2>
                   <p>Very cool stuff, useful and smart</p>
                 </div>
-                <img class="card-user avatar-large" src="images/anne.png">
-                <a class="card-link" href="#" ></a>
+                <%= image_tag"images/anne.png", class: "card-user avatar-large"%>
+                <%= link_to "", "team.html", class: "card-link" %>
             </div>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -68,13 +78,32 @@
                   <h2>Some stuff</h2>
                   <p>Very cool stuff, useful and smart</p>
                 </div>
-                <img class="card-user avatar-large" src="images/seb.png">
-                <a class="card-link" href="#" ></a>
+                <%= image_tag"images/seb.png", class: "card-user avatar-large"%>
+                <%= link_to "", "team.html", class: "card-link" %>
             </div>
           </div>
         </div>
       </div>
+  </div> -->
+
+
+  <div class="container">
+  <div class="row">
+    <% data.flats.each do |owner, flat| %>
+    <div class="col-xs-12 col-sm-4">
+      <div class="card" style="background-image: url('<%= image_path flat.picture %>');">
+        <div class="card-category"><%= flat.city %></div>
+        <div class="card-description">
+          <h2><%= flat.name %></h2>
+          <p><%= flat.summary %></p>
+        </div>
+        <%= image_tag flat.owner_picture, class:"card-user avatar avatar-large" %>
+        <%= link_to "#", "flats/#{owner}.html", class: "card-link" %>
+      </div>
+    </div>
+    <% end %>
   </div>
+</div>
 
 
     <div class="text-center padded" id="newsletter">
